fix(tool-studio): optional empty testValue no longer breaks Test Run — JSHint editor cleanup, KR locale tidy
Signed-off-by: Jemin Huh <hjm1980@gmail.com>